syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";
import "NullableGrpcDate.proto";

message SalesArrangementParametersExtraPayment {
	google.protobuf.StringValue IndividualPriceCommentLastVersion = 1;
	google.protobuf.Int32Value HandoverTypeDetailId = 2;
	google.protobuf.Int32Value ClientKBId = 3;
}
